Fixing text-align on social media icons

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,6 +152,14 @@ input, select, textarea {
 		text-shadow: 0px 2px 2px rgba(51, 0, 20, 0.63);
 	}
 
+		h2.name {
+			font-family: 'Bellota Text', san-serif;
+		}
+
+			h2.name.right {
+				text-align: right;
+			}
+
 	h3 {
 		font-family: 'Arial', sans-serif;
 		color: #646464;
@@ -176,9 +184,17 @@ input, select, textarea {
 		font-family: 'Bellota Text', sans-serif;
 		color: #868686;
 		margin: 0 0 1em 0;
-		font-weight: 300;
+		font-weight: 50;
 		line-height: 1.5em;
-		text-shadow: 0px 3px 2px rgb(51, 0, 20);
+		text-shadow: 0px 1px 2px rgb(51, 0, 20);
+	}
+
+	h2.name.right, 	h5.name.right {
+		text-align: right;
+	}
+
+	h2.name.left, 	h5.name.left {
+		text-align: left;
 	}
 
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -1650,6 +1666,14 @@ input, select, textarea {
 
 	section.person {
 		display: flex;
+	}
+
+	section.icons.right {
+		text-align: right;
+	}
+
+	section.icons.left {
+		text-align: left;
 	}
 
 	.row > section,
